Dynamic routing for individual product is added

--- a/hello.html
+++ b/hello.html
@@ -9,6 +9,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="../LearnReact/src/App.js"></script>
+    <script type="module" src="../ReactEcommerce/src/App.js"></script>
   </body>
 </html>
